     	The latter are interpolated, if necessary, at the observation times.

     o	Bug fix: when 'pfilter' is called with a single parameter vector supplied in the 'params' argument, these parameters are copied into the 'params' slot of the resulting 'pfilterd.pomp' object.

0.39-1
     o	New facilities for parameter transformation are provided.
     	New optional arguments 'parameter.transform' and 'parameter.inv.transform' to 'pomp' allow the user to specify transformations between natural and internal parameter scalings.
	A new option 'transfom' to 'coef' and 'coef<-' allows the user to get and set parameters on the natural scale.
	See 'pomp?coef' and the "intro_to_pomp" vignette for details and examples.
	Similarly, the 'conv.rec' method now takes an optional 'transform' argument.

     o	Minor improvements to the documentation.

0.38-5
     o	'pfilter' will now give an error if ever a non-finite likelihood (dmeasure value) is returned.
	Before, errors were only generated when dmeasure returned NA.

     o	'spect' now returns frequencies reflective of the observation times.
     	Before, the frequencies were given as fractions of the sampling frequency.

0.38-4
     o  Improvements to the documentation.

0.38-3
     o  Clarifications and minor improvements in the help pages.

0.38-2
     o  A new section describing and demonstrating nonlinear forecasting has been added to the "intro to pomp" vignette.

     o	Fixed bug in 'nlf': desire for transient period (nconverge>0) was unrecognized.

0.38-1
     o  Fixed bug in 'pomp' when 'data' is of class 'pomp': userdata should be preserved.

     o	Improved discussion of SIR model in "Intro to pomp" vignette.

     o  In 'pfilterd.pomp' objects, 'saved.states' and 'saved.params' slots are now length-ntimes lists of arrays.

     o  It is now possible to use variable numbers of particles in 'pfilter'.